fix: styling for recommendation card on mobile

--- a/client/src/styles/components/_layout.scss
+++ b/client/src/styles/components/_layout.scss
@@ -492,7 +492,7 @@ section {
   }
 
   .recommendation-card {
-    max-width: 90%;
+    max-width: 100%;
     padding: 2rem 2rem;
   }
 
