--- a/client/src/styles/components/_not_found.scss
+++ b/client/src/styles/components/_not_found.scss
@@ -57,7 +57,8 @@
 }
 
 @keyframes punchyBounce {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateY(0) scale(1);
   }
   25% {
